--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -4,47 +4,33 @@
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
 #
-check_bin_unit = check/bin/unit
-check_bin_unit_LDADD = \
-  $(lib_libtunitas_server_la) \
-  $(lib_libtunitas_application_la) \
-  $(lib_libtunitas_la) \
-  $(lib_libwant_la) \
-  -lrigging-bench-module \
-  -lcppunit \
-  $(end)
-$(check_bin_unit_OBJECTS): AM_CPPFLAGS+=$(AND_CHECK_CPPFLAGS_SET)
-$(check_bin_unit_OBJECTS): AM_CXXFLAGS+=$(AND_CHECK_CXXFLAGS_SET) -Wno-deprecated-declarations
-# reminder: autotools does not put $(AM_LDFLAGS) into check_bin_unit_LDFLAGS, like it does with CPPFLAGS and CXXFLAGS
-check_bin_unit_LDFLAGS = $(CHECK_LDFLAGS_SET)
-check_bin_unit_MODULES = $(call TF_SOURCEStoMODULES, $(check_bin_unit_SOURCES))
-check_bin_unit_SOURCES = \
-  obj/src/tunitas/base64/Encoder.test.Access.cpp \
-  obj/src/tunitas/base64/Decoder.test.Access.cpp \
+tests_unit_SUBSOURCES = \
+  check/obj/src/tunitas/base64/Encoder.test.Access.cpp \
+  check/obj/src/tunitas/base64/Decoder.test.Access.cpp \
   \
-  obj/src/tests/unit/main.cpp \
-  obj/src/tests/unit/namespace.cpp \
-  obj/src/tests/unit/UNREACHABLE.cpp \
-  $(obj_src_tests_unit_application_SUBSOURCES) \
-  $(obj_src_tests_unit_base64_SUBSOURCES) \
-  $(obj_src_tests_unit_exception_SUBSOURCES) \
-  obj/src/tests/unit/exits.Fixture.cpp \
-  $(obj_src_tests_unit_for_each_SUBSOURCES) \
-  obj/src/tests/unit/outcome.Fixture.cpp \
-  obj/src/tests/unit/outcome.Fixture.Uncopyable.cpp \
-  obj/src/tests/unit/outcome.Usage.cpp \
-  obj/src/tests/unit/required.Fixture.cpp \
-  $(obj_src_tests_unit_server_SUBSOURCES) \
-  obj/src/tests/unit/time.Fixture.cpp \
-  obj/src/tests/unit/time.literals.Fixture.cpp \
-  obj/src/tests/unit/time.duration.Fixture.cpp \
-  obj/src/tests/unit/time.ratio.Fixture.cpp \
-  obj/src/tests/unit/tunitas.Fixture.cpp \
-  obj/src/tests/unit/urlsafe.Fixture.cpp \
-  obj/src/tests/unit/want.Fixture.cpp \
-  obj/src/tests/unit/want.nonstd.Fixture.cpp \
-  obj/src/tests/unit/want.sys.Fixture.cpp \
-  obj/src/tests/unit/want.sys.posix.Fixture.cpp \
+  check/obj/src/tests/unit/main.cpp \
+  check/obj/src/tests/unit/namespace.cpp \
+  check/obj/src/tests/unit/UNREACHABLE.cpp \
+  $(tests_unit_application_SUBSOURCES) \
+  $(tests_unit_base64_SUBSOURCES) \
+  $(tests_unit_exception_SUBSOURCES) \
+  check/obj/src/tests/unit/exits.Fixture.cpp \
+  $(tests_unit_for_each_SUBSOURCES) \
+  check/obj/src/tests/unit/outcome.Fixture.cpp \
+  check/obj/src/tests/unit/outcome.Fixture.Uncopyable.cpp \
+  check/obj/src/tests/unit/outcome.Usage.cpp \
+  check/obj/src/tests/unit/required.Fixture.cpp \
+  $(tests_unit_server_SUBSOURCES) \
+  check/obj/src/tests/unit/time.Fixture.cpp \
+  check/obj/src/tests/unit/time.literals.Fixture.cpp \
+  check/obj/src/tests/unit/time.duration.Fixture.cpp \
+  check/obj/src/tests/unit/time.ratio.Fixture.cpp \
+  check/obj/src/tests/unit/tunitas.Fixture.cpp \
+  check/obj/src/tests/unit/urlsafe.Fixture.cpp \
+  check/obj/src/tests/unit/want.Fixture.cpp \
+  check/obj/src/tests/unit/want.nonstd.Fixture.cpp \
+  check/obj/src/tests/unit/want.sys.Fixture.cpp \
+  check/obj/src/tests/unit/want.sys.posix.Fixture.cpp \
   $(end)
 #
 include src/tests/unit/application/Makefrag.am
@@ -52,14 +38,3 @@ include src/tests/unit/base64/Makefrag.am
 include src/tests/unit/exception/Makefrag.am
 include src/tests/unit/for_each/Makefrag.am
 include src/tests/unit/server/Makefrag.am
-#
-$(scold_cxxdir)/tests/unit/dependencies.mk: $(check_bin_unit_SOURCES)
-$(check_bin_unit_SOURCES) : obj/src/%.cpp : src/%.xcpp
-	$(TF_V_DIS) $(call TF_XCPP2CPP, $<)
-	$(TF_V_DONE) test -e $@
-$(scold_cxxdir)/tests/unit/dependencies.mk:
-	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
-	$(TF_V_DONE) test -e $@
-include $(scold_cxxdir)/tests/unit/dependencies.mk
-clean-dependencies::
-	rm -f $(scold_cxxdir)/tests/unit/dependencies.mk
