--- a/src/want/Makefrag.am
+++ b/src/want/Makefrag.am
@@ -3,11 +3,8 @@
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
-
-lib_libwant_la = lib/libwant.la
-lib_libwant_la_LIBADD = $(nothing)
-lib_libwant_la_MODULES = $(call TF_SOURCEStoMODULES, $(lib_libwant_la_SOURCES))
-lib_libwant_la_SOURCES = \
+#
+want_SUBSOURCES = \
   obj/src/want/namespace.cpp \
   \
   obj/src/want/nonstd.cpp \
@@ -37,13 +34,3 @@ lib_libwant_la_SOURCES = \
   obj/src/want/sys.posix.setresuid.cpp \
   obj/src/want/sys.posix.setreuid.cpp \
   $(end)
-$(scold_cxxdir)/want/dependencies.mk: $(lib_libwant_la_SOURCES)
-$(lib_libwant_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
-	$(TF_V_DIS) $(call TF_XCPP2CPP, $<)
-	$(TF_V_DONE) test -e $@
-$(scold_cxxdir)/want/dependencies.mk:
-	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
-	$(TF_V_DONE) test -e $@
-include $(scold_cxxdir)/want/dependencies.mk
-clean-dependencies::
-	rm -f $(scold_cxxdir)/want/dependencies.mk
