--- a/src/tests/base64/Makefrag.am
+++ b/src/tests/base64/Makefrag.am
@@ -3,45 +3,8 @@
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
-
-check_lib_libtests_base64_la = check/lib/libtests-base64.la
-check_lib_libtests_base64_la_LIBADD = $(lib_libtunitas_la)
-check_lib_libtests_base64_la_MODULES = $(call TF_SOURCEStoMODULES, $(check_lib_libtests_base64_la_SOURCES))
-check_lib_libtests_base64_la_SOURCES = \
-  obj/src/tests/base64/namespace.cpp \
-  obj/src/tests/base64/remain.cpp \
+#
+tests_base64_SUBSOURCES = \
+  check/obj/src/tests/base64/namespace.cpp \
+  check/obj/src/tests/base64/remain.cpp \
   $(end)
-
-check_bin_base64_decode = check/bin/base64-decode
-check_bin_base64_decode_LDADD = $(check_lib_libtests_base64_la)
-# reminder: autotools does not put $(AM_LDFLAGS) into check_bin_base64_decode_LDFLAGS, like it does with CPPFLAGS and CXXFLAGS
-check_bin_base64_decode_LDFLAGS = $(CHECK_LDFLAGS_SET)
-check_bin_base64_decode_MODULES = $(call TF_SOURCEStoMODULES, $(check_bin_base64_decode_SOURCES))
-check_bin_base64_decode_SOURCES = \
-  obj/src/tests/base64/decode.cpp \
-  $(end)
-
-check_bin_base64_encode = check/bin/base64-encode
-check_bin_base64_encode_LDADD = $(check_lib_libtests_base64_la)
-# reminder: autotools does not put $(AM_LDFLAGS) into check_bin_base64_encode_LDFLAGS, like it does with CPPFLAGS and CXXFLAGS
-check_bin_base64_encode_LDFLAGS = $(CHECK_LDFLAGS_SET)
-check_bin_base64_encode_MODULES = $(call TF_SOURCEStoMODULES, $(check_bin_base64_encode_SOURCES))
-check_bin_base64_encode_SOURCES = \
-  obj/src/tests/base64/encode.cpp \
-  $(end)
-
-src_tests_base64_SOURCES_SET = \
-  $(check_lib_libtests_base64_la_SOURCES) \
-  $(check_bin_base64_decode_SOURCES) \
-  $(check_bin_base64_encode_SOURCES) \
-  $(end)
-$(scold_cxxdir)/tests/base64/dependencies.mk: $(src_tests_base64_SOURCES_SET)
-$(src_tests_base64_SOURCES_SET) : obj/src/%.cpp : src/%.xcpp
-	$(TF_V_DIS) $(call TF_XCPP2CPP, $<)
-	$(TF_V_DONE) test -e $@
-$(scold_cxxdir)/tests/base64/dependencies.mk:
-	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
-	$(TF_V_DONE) test -e $@
-include $(scold_cxxdir)/tests/base64/dependencies.mk
-clean-dependencies::
-	rm -f $(scold_cxxdir)/tests/base64/dependencies.mk
