--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -3,49 +3,22 @@
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
-
-# DSO API versioning; see the README which is nearby.
-# else https://wiki.scold-lang.org/page/DSO
 #
-#   CURRENT <= CURRENT+1 if any interfaces were added
-#           <= CURRENT+1 if any interfaces were removed
-#           <= CURRENT+1 if any interfaces were changed
-#           <= CURRENT   if no interface change, but any other (source code) change
-#
-#   REVISION <= 0          if any interfaces were added
-#            <= 0          if any interfaces were removed
-#            <= 0          if any interfaces were changed
-#            <= REVISION+1 if no interface change, but any other (source code) change
-#
-#   AGE <= AGE+1 if any interaces were added
-#       <= 0     if any interfaces were removed
-#       <= 0     if any interfaces were changed
-#       <= AGE   if no interface change, but any other (source code) change
-#
-lib_libtunitas_la_CURRENT = 18
-lib_libtunitas_la_REVISION = 3
-lib_libtunitas_la_AGE = 1
-lib_libtunitas_la_CRA = $(lib_libtunitas_la_CURRENT):$(lib_libtunitas_la_REVISION):$(lib_libtunitas_la_AGE)
-
-lib_libtunitas_la = lib/libtunitas.la
-lib_libtunitas_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET) -version-info $(lib_libtunitas_la_CRA)
-lib_libtunitas_la_LIBADD = -lsys-module $(lib_libwant_la)
-lib_libtunitas_la_MODULES = $(call TF_SOURCEStoMODULES, $(lib_libtunitas_la_SOURCES))
-lib_libtunitas_la_SOURCES = \
+tunitas_SUBSOURCES = \
   obj/src/tunitas/namespace.cpp \
   obj/src/tunitas/literals.cpp \
   obj/src/tunitas/Optional.cpp \
   obj/src/tunitas/Pair.cpp \
   \
-  $(obj_src_tunitas_base64_SUBSOURCES) \
-  $(obj_src_tunitas_exception_SUBSOURCES) \
-  $(obj_src_tunitas_file_SUBSOURCES) \
-  $(obj_src_tunitas_outcome_SUBSOURCES) \
-  $(obj_src_tunitas_required_SUBSOURCES) \
-  $(obj_src_tunitas_string_SUBSOURCES) \
-  $(obj_src_tunitas_time_SUBSOURCES) \
-  $(obj_src_tunitas_tuple_SUBSOURCES) \
-  $(obj_src_tunitas_urlsafe_SUBSOURCES) \
+  $(tunitas_base64_SUBSOURCES) \
+  $(tunitas_exception_SUBSOURCES) \
+  $(tunitas_file_SUBSOURCES) \
+  $(tunitas_outcome_SUBSOURCES) \
+  $(tunitas_required_SUBSOURCES) \
+  $(tunitas_string_SUBSOURCES) \
+  $(tunitas_time_SUBSOURCES) \
+  $(tunitas_tuple_SUBSOURCES) \
+  $(tunitas_urlsafe_SUBSOURCES) \
   $(end)
 #
 include src/tunitas/base64/Makefrag.am
@@ -57,14 +30,3 @@ include src/tunitas/string/Makefrag.am
 include src/tunitas/time/Makefrag.am
 include src/tunitas/tuple/Makefrag.am
 include src/tunitas/urlsafe/Makefrag.am
-#
-$(scold_cxxdir)/tunitas/dependencies.mk: $(lib_libtunitas_la_SOURCES)
-$(lib_libtunitas_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
-	$(TF_V_DIS) $(call TF_XCPP2CPP, $<)
-	$(TF_V_DONE) test -e $@
-$(scold_cxxdir)/tunitas/dependencies.mk:
-	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
-	$(TF_V_DONE) test -e $@
-include $(scold_cxxdir)/tunitas/dependencies.mk
-clean-dependencies::
-	rm -f $(scold_cxxdir)/tunitas/dependencies.mk
