--- a/src/tunitas/app/Makefrag.am
+++ b/src/tunitas/app/Makefrag.am
@@ -1,21 +1,13 @@
 # This is a GNU -*- Makefile -*- fragment that is included by Automake
-# Copyright Yahoo Inc, 2021.
+# Copyright Yahoo Inc. 2021
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
 #
-# This library is a compatibility shim for libtunitas-app so that older applications can continue to link against -ltunitas-app
-#
-# [[current]]    -ltunitas-application
-# [[deprecated]] -ltunitas-app
-#
-lib_libtunitas_app_la_CURRENT = $(lib_libtunitas_application_la_CURRENT)
-lib_libtunitas_app_la_REVISION = $(lib_libtunitas_application_la_REVISION)
-lib_libtunitas_app_la_AGE = $(lib_libtunitas_application_la_AGE)
-lib_libtunitas_app_la_CRA = $(lib_libtunitas_app_la_CURRENT):$(lib_libtunitas_app_la_REVISION):$(lib_libtunitas_app_la_AGE)
-
-lib_libtunitas_app_la = lib/libtunitas-app.la
-lib_libtunitas_app_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET) -version-info $(lib_libtunitas_app_la_CRA)
-lib_libtunitas_app_la_LIBADD = $(lib_libtunitas_application_la)
-lib_libtunitas_app_la_MODULES = $(none)
-lib_libtunitas_app_la_SOURCES = $(none)
+tunitas_app_SUBSOURCES = \
+  obj/src/tunitas/app/exception/Quitting.cpp \
+  obj/src/tunitas/app/exits/constants.cpp \
+  obj/src/tunitas/app/options/Args.cpp \
+  obj/src/tunitas/app/Program.cpp \
+  $(end)
+$(tunitas_app_SUBSOURCES) : DISCOFLAGS+=--no-insert-namespace
