--- a/src/tunitas/application/Makefrag.am
+++ b/src/tunitas/application/Makefrag.am
@@ -3,35 +3,9 @@
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
-
-# DSO API versioning; see the README which is nearby.
-# else https://wiki.scold-lang.org/page/DSO
 #
-#   CURRENT <= CURRENT+1 if any interfaces were added
-#           <= CURRENT+1 if any interfaces were removed
-#           <= CURRENT+1 if any interfaces were changed
-#           <= CURRENT   if no interface change, but any other (source code) change
-#
-#   REVISION <= 0          if any interfaces were added
-#            <= 0          if any interfaces were removed
-#            <= 0          if any interfaces were changed
-#            <= REVISION+1 if no interface change, but any other (source code) change
-#
-#   AGE <= AGE+1 if any interaces were added
-#       <= 0     if any interfaces were removed
-#       <= 0     if any interfaces were changed
-#       <= AGE   if no interface change, but any other (source code) change
-#
-lib_libtunitas_application_la_CURRENT = 7
-lib_libtunitas_application_la_REVISION = 1
-lib_libtunitas_application_la_AGE = 0
-lib_libtunitas_application_la_CRA = $(lib_libtunitas_application_la_CURRENT):$(lib_libtunitas_application_la_REVISION):$(lib_libtunitas_application_la_AGE)
-
-lib_libtunitas_application_la = lib/libtunitas-application.la
-lib_libtunitas_application_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET) -version-info $(lib_libtunitas_application_la_CRA)
-lib_libtunitas_application_la_LIBADD = -loptions-module -lsys-module -lnonstd-module $(lib_libtunitas_la) $(lib_libwant_la)
-lib_libtunitas_application_la_MODULES = $(call TF_SOURCEStoMODULES, $(lib_libtunitas_application_la_SOURCES))
-lib_libtunitas_application_la_SOURCES = \
+tunitas_application_SUBSOURCES = \
+  $(tunitas_app_SUBSOURCES) \
   obj/src/tunitas/application/namespace.cpp \
   obj/src/tunitas/application/Configuration.cpp \
   obj/src/tunitas/application/Program.cpp \
@@ -58,7 +32,7 @@ lib_libtunitas_application_la_SOURCES = \
   obj/src/tunitas/application/exception/Usage.cpp \
   obj/src/tunitas/application/exception/Version.cpp \
   \
-  $(obj_src_tunitas_application_options_SUBSOURCES) \
+  $(tunitas_application_options_SUBSOURCES) \
   obj/src/tunitas/application/required/namespace.cpp \
   obj/src/tunitas/application/required/exception.Quitting.cpp \
   \
@@ -67,15 +41,5 @@ lib_libtunitas_application_la_SOURCES = \
   obj/src/tunitas/application/words.Strings.cpp \
   $(end)
 #
+include src/tunitas/app/Makefrag.am
 include src/tunitas/application/options/Makefrag.am
-#
-$(scold_cxxdir)/tunitas/application/dependencies.mk: $(lib_libtunitas_application_la_SOURCES)
-$(lib_libtunitas_application_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
-	$(TF_V_DIS) $(call TF_XCPP2CPP, $^)
-	$(TF_V_DONE) test -e $@
-$(scold_cxxdir)/tunitas/application/dependencies.mk:
-	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
-	$(TF_V_DONE) test -e $@
-include $(scold_cxxdir)/tunitas/application/dependencies.mk
-clean-dependencies::
-	rm -f $(scold_cxxdir)/tunitas/application/dependencies.mk
