--- a/src/tunitas/file/Makefrag.am
+++ b/src/tunitas/file/Makefrag.am
@@ -4,7 +4,7 @@
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
 #
-obj_src_tunitas_file_SUBSOURCES = \
+tunitas_file_SUBSOURCES = \
   obj/src/tunitas/file/namespace.cpp \
   obj/src/tunitas/file/Path.cpp \
   $(end)
