--- a/src/tunitas/server/Makefrag.am
+++ b/src/tunitas/server/Makefrag.am
@@ -3,29 +3,8 @@
 # Licensed under the terms of the Apache-2.0 license.
 # For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
 # For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
-
-# DSO API versioning; see the README which is nearby. (probably in ../README)
 #
-#   CURRENT <= CURRENT+1 if any interfaces were added, removed, changed
-#           <= CURRENT   if no interface change, but any other (source code) change
-#
-#   REVISION <= 0          if any interfaces were added, removed, changed
-#               REVISION+1 if no interface change, but any other (source code) change
-#
-#   AGE <= AGE+1 if any interaces were added
-#       <= 0     if any interfaces were removed, changed
-#       <= AGE   if no interface change, but any other (source code) change
-#
-lib_libtunitas_server_la_CURRENT = 2
-lib_libtunitas_server_la_REVISION = 1
-lib_libtunitas_server_la_AGE = 1
-lib_libtunitas_server_la_CRA = $(lib_libtunitas_server_la_CURRENT):$(lib_libtunitas_server_la_REVISION):$(lib_libtunitas_server_la_AGE)
-
-lib_libtunitas_server_la = lib/libtunitas-server.la
-lib_libtunitas_server_la_LIBADD =  $(lib_libtunitas_la) $(lib_libwant_la) -lmicrohttpd++
-lib_libtunitas_server_la_LDFLAGS = $(PACKAGE_LDFLAGS_SET) -version-info $(lib_libtunitas_server_la_CRA)
-lib_libtunitas_server_la_MODULES = $(call TF_SOURCEStoMODULES, $(lib_libtunitas_server_la_SOURCES))
-lib_libtunitas_server_la_SOURCES = \
+tunitas_server_SUBSOURCES = \
   obj/src/tunitas/server/namespace.cpp \
   obj/src/tunitas/server/constants.cpp \
   obj/src/tunitas/server/filters.cpp \
@@ -33,23 +12,11 @@ lib_libtunitas_server_la_SOURCES = \
   obj/src/tunitas/server/resources.cpp \
   obj/src/tunitas/server/responses.cpp \
   obj/src/tunitas/server/service.cpp \
-  \
-  obj/src/tunitas/server/exception/namespace.cpp \
-  obj/src/tunitas/server/exception/Aspect.cpp \
-  obj/src/tunitas/server/exception/Generic.cpp \
-  \
-  obj/src/tunitas/server/required/namespace.cpp \
-  obj/src/tunitas/server/required/Stringable.cpp \
-  obj/src/tunitas/server/required/Resourceful.cpp \
-  obj/src/tunitas/server/required/Permissioned.cpp \
+  $(tunitas_server_configuration_SUBSOURCES) \
+  $(tunitas_server_exception_SUBSOURCES) \
+  $(tunitas_server_required_SUBSOURCES) \
   $(end)
-$(scold_cxxdir)/tunitas/server/dependencies.mk: $(lib_libtunitas_server_la_SOURCES)
-$(lib_libtunitas_server_la_SOURCES) : obj/src/%.cpp : src/%.xcpp
-	$(TF_V_DIS) $(call TF_XCPP2CPP, $<)
-	$(TF_V_DONE) test -e $@
-$(scold_cxxdir)/tunitas/server/dependencies.mk:
-	$(TF_V_DEP) $(call TF_DEPENDENCIES, $^)
-	$(TF_V_DONE) test -e $@
-include $(scold_cxxdir)/tunitas/server/dependencies.mk
-clean-dependencies::
-	rm -f $(scold_cxxdir)/tunitas/server/dependencies.mk
+#
+include src/tunitas/server/configuration/Makefrag.am
+include src/tunitas/server/exception/Makefrag.am
+include src/tunitas/server/required/Makefrag.am
