--- a/src/tunitas/Makefrag.am
+++ b/src/tunitas/Makefrag.am
@@ -11,8 +11,10 @@ tunitas_SUBSOURCES = \
   obj/src/tunitas/Pair.cpp \
   \
   $(tunitas_base64_SUBSOURCES) \
+  $(tunitas_error_SUBSOURCES) \
   $(tunitas_exception_SUBSOURCES) \
   $(tunitas_file_SUBSOURCES) \
+  $(tunitas_otherwise_SUBSOURCES) \
   $(tunitas_outcome_SUBSOURCES) \
   $(tunitas_required_SUBSOURCES) \
   $(tunitas_string_SUBSOURCES) \
@@ -23,8 +25,10 @@ tunitas_SUBSOURCES = \
   $(end)
 #
 include src/tunitas/base64/Makefrag.am
+include src/tunitas/error/Makefrag.am
 include src/tunitas/exception/Makefrag.am
 include src/tunitas/file/Makefrag.am
+include src/tunitas/otherwise/Makefrag.am
 include src/tunitas/outcome/Makefrag.am
 include src/tunitas/required/Makefrag.am
 include src/tunitas/string/Makefrag.am
