--- a/src/tests/unit/Makefrag.am
+++ b/src/tests/unit/Makefrag.am
@@ -14,6 +14,7 @@ tests_unit_SUBSOURCES = \
   check/obj/src/tests/unit/UNREACHABLE.cpp \
   $(tests_unit_application_SUBSOURCES) \
   $(tests_unit_base64_SUBSOURCES) \
+  $(tests_unit_error_SUBSOURCES) \
   $(tests_unit_exception_SUBSOURCES) \
   check/obj/src/tests/unit/exits.Fixture.cpp \
   $(tests_unit_for_each_SUBSOURCES) \
@@ -37,6 +38,7 @@ tests_unit_SUBSOURCES = \
 #
 include src/tests/unit/application/Makefrag.am
 include src/tests/unit/base64/Makefrag.am
+include src/tests/unit/error/Makefrag.am
 include src/tests/unit/exception/Makefrag.am
 include src/tests/unit/for_each/Makefrag.am
 include src/tests/unit/server/Makefrag.am
