--- a/src/tunitas/exception/Makefrag.am
+++ b/src/tunitas/exception/Makefrag.am
@@ -17,6 +17,7 @@ tunitas_exception_SUBSOURCES = \
   obj/src/tunitas/exception/bundle.Features.cpp \
   obj/src/tunitas/exception/bundle.Aspects.cpp \
   \
+  obj/src/tunitas/exception/feature.Allocation.cpp \
   obj/src/tunitas/exception/feature.Bound.cpp \
   obj/src/tunitas/exception/feature.Cast.cpp \
   obj/src/tunitas/exception/feature.Domain.cpp \
@@ -27,15 +28,20 @@ tunitas_exception_SUBSOURCES = \
   obj/src/tunitas/exception/feature.Indirection.cpp \
   obj/src/tunitas/exception/feature.Invalid.cpp \
   obj/src/tunitas/exception/feature.Invariant.cpp \
+  obj/src/tunitas/exception/feature.Length.cpp \
   obj/src/tunitas/exception/feature.Logic.cpp \
-  obj/src/tunitas/exception/feature.Null.cpp \
   obj/src/tunitas/exception/feature.Messaging.cpp \
+  obj/src/tunitas/exception/feature.Null.cpp \
+  obj/src/tunitas/exception/feature.Optional.cpp \
   obj/src/tunitas/exception/feature.Quitting.cpp \
   obj/src/tunitas/exception/feature.Range.cpp \
   obj/src/tunitas/exception/feature.Runtime.cpp \
   obj/src/tunitas/exception/feature.Stream.cpp \
   obj/src/tunitas/exception/feature.System.cpp \
+  obj/src/tunitas/exception/feature.Unimplemented.cpp \
+  obj/src/tunitas/exception/feature.Variant.cpp \
   \
+  obj/src/tunitas/exception/partial.Allocation.cpp \
   obj/src/tunitas/exception/partial.Bound.cpp \
   obj/src/tunitas/exception/partial.Cast.cpp \
   obj/src/tunitas/exception/partial.Domain.cpp \
@@ -46,13 +52,18 @@ tunitas_exception_SUBSOURCES = \
   obj/src/tunitas/exception/partial.Indirection.cpp \
   obj/src/tunitas/exception/partial.Invalid.cpp \
   obj/src/tunitas/exception/partial.Invariant.cpp \
+  obj/src/tunitas/exception/partial.Length.cpp \
   obj/src/tunitas/exception/partial.Logic.cpp \
   obj/src/tunitas/exception/partial.Null.cpp \
+  obj/src/tunitas/exception/partial.Optional.cpp \
   obj/src/tunitas/exception/partial.Range.cpp \
   obj/src/tunitas/exception/partial.Runtime.cpp \
   obj/src/tunitas/exception/partial.Stream.cpp \
   obj/src/tunitas/exception/partial.System.cpp \
+  obj/src/tunitas/exception/partial.Unimplemented.cpp \
+  obj/src/tunitas/exception/partial.Variant.cpp \
   \
+  obj/src/tunitas/exception/Allocation.cpp \
   obj/src/tunitas/exception/Bound.cpp \
   obj/src/tunitas/exception/Cast.cpp \
   obj/src/tunitas/exception/Domain.cpp \
@@ -63,12 +74,16 @@ tunitas_exception_SUBSOURCES = \
   obj/src/tunitas/exception/Indirection.cpp \
   obj/src/tunitas/exception/Invalid.cpp \
   obj/src/tunitas/exception/Invariant.cpp \
+  obj/src/tunitas/exception/Length.cpp \
   obj/src/tunitas/exception/Logic.cpp \
   obj/src/tunitas/exception/Null.cpp \
+  obj/src/tunitas/exception/Optional.cpp \
   obj/src/tunitas/exception/Range.cpp \
   obj/src/tunitas/exception/Runtime.cpp \
   obj/src/tunitas/exception/Stream.cpp \
   obj/src/tunitas/exception/System.cpp \
+  obj/src/tunitas/exception/Unimplemented.cpp \
+  obj/src/tunitas/exception/Variant.cpp \
   $(end)
 #
 include src/tunitas/exception/aspect/Makefrag.am
