--- a/configure.ac
+++ b/configure.ac
@@ -22,12 +22,9 @@ dnl      |
 dnl      \prefix\
 dnl      ||||||||
 dnl      vvvvvvvv
-AC_INIT([tunitas-basics], [2.1.0], [tunitas@yahooinc.com])
+AC_INIT([tunitas-basics], [2.1.1], [tunitas@yahooinc.com])
 TF_INIT(AC_PACKAGE_NAME, AC_PACKAGE_VERSION, AC_PACKAGE_BUGREPORT)
-
-dnl See the AUTOMAKE_OPTIONS in the Makefile.am
-AM_INIT_AUTOMAKE
-AM_SILENT_RULES([yes])
+AM_SILENT_RULES([yes]) dnl See the AUTOMAKE_OPTIONS in the Makefile.am
 
 AC_CONFIG_SRCDIR([src/tunitas/namespace.xcpp])
 AC_CONFIG_MACRO_DIR([m4])
